@@ -32,6 +32,8 @@ Extension Modules
 Library
 -------
 
+- The IOCTL module from IRIX has been deprecated for removal in Python 3.0.
+
 - The IN module from IRIX has been deprecated for removal in Python 3.0.
 
 - The imgfile module from IRIX has been deprecated for removal in Python 3.0.
